--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -203,20 +203,20 @@
     width: 40%;
     max-width: 40vw;
     margin: 6em auto;
-    padding: 1em;
+    padding: 0.5em 1em;
     overflow: hidden;
     border: 1em solid white;
     outline: 0.2em solid white;
     outline-offset: 1.5em;
     box-sizing: border-box;
-    min-height: 10.625rem;
+    min-height: 32.625rem;
     height: auto;
   }
 
   .thumbnails picture {
-    width: 390px;
-    height: 329px;
-    min-height: 20.56rem;
+    width: 382px;
+    height: 323px;
+    min-height: 20rem;
   }
 
   .thumbnails img {
@@ -369,13 +369,13 @@
     }
 
     .thumbnails picture {
-      width: 170px;
-      height: 146px;
+      width: 450px;
+      height: 380px;
       min-height: 9.125rem;
     }
 
     .thumbnails img {
-      aspect-ratio: 170 / 146;
+      aspect-ratio: 450 / 380;
     }
 
     #projects {
@@ -414,13 +414,13 @@
   @media (max-width:768px) {
 
     .thumbnails picture {
-      width: 337px;
-      height: 288px;
+      width: 355px;
+      height: 300px;
       min-height: 18rem;
     }
 
     .thumbnails img {
-      aspect-ratio: 337 / 288;
+      aspect-ratio: 355 / 300;
       margin-bottom: 2em;
     }
 
@@ -565,13 +565,13 @@
     }
 
     .thumbnails picture {
-      width: 275px;
-      height: 238px;
+      width: 338px;
+      height: 285px;
       min-height: 9.125rem;
     }
 
     .thumbnails img {
-      aspect-ratio: 275 / 238;
+      aspect-ratio: 338 / 285;
     }
 
     #grade-table-img1,
@@ -655,13 +655,13 @@
     }
 
     .author-bio-container img {
-      width: 297px;
+      width: 265px;
       height: auto;
       min-height: 9.25rem;
     }
 
     .thumbnails img {
-      aspect-ratio: 220 / 189;
+      aspect-ratio: 237 / 201;
     }
 
     #section1 {
