--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -65,7 +65,7 @@
     background-color: #fff;
     width: 98%;
     padding: 1em;
-    min-height: 160px;
+    min-height: 11rem;
   }
 
   .project-title h2 {
@@ -553,6 +553,11 @@
   }
 
   @media (max-width: 680px) {
+    .project-title {
+      width: 80%;
+      max-width: 80vw;
+    }
+
     .thumbnail #projects {
       width: 90%;
       max-width: 90vw;
