--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -26,7 +26,9 @@
 
   .projects-content {
     min-height: 100vh;
-    height: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
     contain: layout style;
     overflow: hidden;
     position: relative;
@@ -38,11 +40,6 @@
     visibility: hidden;
     display: block;
   }
-
-  body.fonts-loaded .projects-placeholder {
-    display: none;
-  }
-
 
   #the-design {
     margin: 0 auto;
