adjusted thumbnail sizes

--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -939,6 +939,11 @@ button.submit-button:hover {
     height: auto;
   }
 
+  .footer-logo {
+    height: 109px;
+    width: 250px;
+  }
+
 }
 
 a:focus,
