--- a/styles/styles-global.css
+++ b/styles/styles-global.css
@@ -11,7 +11,10 @@ body {
   margin: 0;
   padding: 0;
   color: #222;
-  min-height: 100vh;
+  min-height: unset;
+  width: 100%;
+  height: auto;
+  max-width: 100vw;
 }
 
 * {
@@ -673,7 +676,8 @@ button.submit-button:hover {
   transform: translateX(100%);
   transition: transform .3s ease;
   flex-direction: column;
-  padding-top: 60px
+  padding-top: 60px;
+  min-height: 100vh;
 }
 
 .hamburger-nav-links.active {
