--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -50,18 +50,33 @@
     line-height: 1.6;
   }
 
-  .project-title h3 {
+  .project-sub-title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    text-align: center;
+    height: auto;
+    margin: 1em auto 2em;
+    background-color: #fff;
+    width: 80%;
+    max-width: 80vw;
+    padding: 1em;
+    min-height: 8rem;
+  }
+
+  .project-sub-title h2 {
     font-size: clamp(1rem, 2rem, 2.5rem);
     height: auto;
     width: 100%;
-    line-height: 1.6;
+    line-height: 1.3;
   }
 
   .author-bio-text h3 {
     font-size: 1.8rem;
     width: 100%;
     height: auto;
-    line-height: 1.7;
+    line-height: 1.4;
   }
 
   .author-bio-text p i,
@@ -202,6 +217,63 @@
     margin: auto;
     padding: 0.25em;
     aspect-ratio: 383 / 317;
+  }
+
+  .wireframe,
+  .past-meets-future {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2em;
+    margin: 6em auto 6em;
+    max-width: 50vw;
+    min-height: 100vh;
+  }
+
+  #wireframe-img1 picture {
+    width: 800px;
+    height: 2714px;
+    min-height: 84rem;
+  }
+
+  #wireframe-img1 img {
+    aspect-ratio: 800 / 2714;
+  }
+
+  #wireframe-img2 picture {
+    width: 800px;
+    height: 1445px;
+    min-height: 84rem;
+  }
+
+  #wireframe-img1 img {
+    aspect-ratio: 800 / 1445;
+  }
+
+  #wireframe-img3 picture {
+    width: 800px;
+    height: 2721px;
+    min-height: 84rem;
+  }
+
+  #wireframe-img3 img {
+    aspect-ratio: 800 / 2721;
+  }
+
+  .past-meets-future picture {
+    width: 800px;
+    height: 665px;
+    min-height: 20rem;
+  }
+
+  .past-meets-future img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    display: block;
+    margin: auto;
+    padding: 0.25em;
+    aspect-ratio: 800 / 665;
   }
 
   .menu-grid {
@@ -351,6 +423,16 @@
       aspect-ratio: 282 / 233;
     }
 
+    .past-meets-future picture {
+      width: 388px;
+      height: 322px;
+      min-height: 20rem;
+    }
+
+    .past-meets-future img {
+      aspect-ratio: 388 / 322;
+    }
+
     #projects {
       width: 75%;
       max-width: 75vw;
@@ -396,6 +478,17 @@
     .thumbnails img {
       aspect-ratio: 356 / 295;
       margin-bottom: 2em;
+    }
+
+    .past-meets-future picture {
+      width: 300px;
+      height: 400px;
+      min-height: 15rem;
+      margin: 2em auto 2em;
+    }
+
+    .past-meets-future img {
+      aspect-ratio: 300 / 400;
     }
 
     #collections-buttongrid {
@@ -527,6 +620,42 @@
       margin: 4em auto 4em;
       padding: 0.5em 1em;
     }
+
+    .wireframe {
+      width: 90%;
+      max-width: 90vw;
+      gap: 1em;
+    }
+
+    #wireframe-img1 picture {
+      width: 407px;
+      height: 736px;
+      min-height: 46rem;
+    }
+
+    #wireframe-img1 img {
+      aspect-ratio: 447 / 736;
+    }
+
+    #wireframe-img2 picture {
+      width: 407px;
+      height: 733px;
+      min-height: 45rem;
+    }
+
+    #wireframe-img2 img {
+      aspect-ratio: 407 / 733;
+    }
+
+    #wireframe-img3 picture {
+      width: 407px;
+      height: 1386px;
+      min-height: 84rem;
+    }
+
+    #wireframe-img3 img {
+      aspect-ratio: 407 / 1386;
+    }
   }
 
   @media (max-width: 680px) {
@@ -553,7 +682,25 @@
     }
 
     .thumbnails img {
-      aspect-ratio: 291 / 241;
+      aspect-ratio: 232 / 241;
+    }
+
+    .past-meets-future picture {
+      width: 300px;
+      height: 392px;
+      min-height: 10rem;
+      padding-top: 0;
+      min-height: 10rem;
+    }
+
+    .past-meets-future {
+      width: 90%;
+      max-width: 90vw;
+      margin: 1em auto 1em;
+    }
+
+    .past-meets-future img {
+      aspect-ratio: 292 / 392;
     }
 
     #grade-table-img1,
@@ -564,7 +711,6 @@
     .cta-section,
     #grade-img,
     #mood-board,
-    .past-meets-future,
     #pagespeed-grade-img1,
     #pagespeed-grade-img2,
     #pagespeed-grade-img3,
@@ -590,6 +736,7 @@
       outline: 0.2em solid white;
       outline-offset: 1.5em;
       box-sizing: border-box;
+      height: auto;
     }
 
     .hubspot img,
@@ -600,6 +747,7 @@
       height: auto;
       display: block;
       object-fit: contain;
+
     }
 
     #wireframe-img2 img,
@@ -609,7 +757,6 @@
     #cute-robot img,
     .cta-section img,
     #mood-baord img,
-    .past-meets-future img,
     #pagespeed-grade-img1 img,
     #pagespeed-grade-img2 img,
     #pagespeed-grade-img3 img,
@@ -624,9 +771,66 @@
       margin: auto;
       padding: 0.25em;
     }
+
+    .project-sub-title {
+      margin: 6em auto 0;
+    }
+
+    .wireframe {
+      gap: 1em;
+      margin: 0 auto;
+    }
+
+    .past-meets-future {
+      margin: 6em auto 8em;
+    }
+
+
+    #wireframe-img1 picture {
+      width: 327px;
+      height: 590px;
+      min-height: 23rem;
+    }
+
+    #wireframe-img1 img {
+      aspect-ratio: 327 / 590;
+    }
+
+    #wireframe-img2 picture {
+      width: 319px;
+      height: 575px;
+      min-height: 22rem;
+    }
+
+    #wireframe-img2 img {
+      aspect-ratio: 319 / 575;
+    }
+
+    #wireframe-img3 picture {
+      width: 327px;
+      height: 1115px;
+      min-height: 43rem;
+    }
+
+    #wireframe-img3 img {
+      aspect-ratio: 327 / 1115;
+    }
   }
 
   @media (max-width:480px) {
+    .project-sub-title {
+      margin: 6em auto 0;
+    }
+
+    .wireframe {
+      gap: 1em;
+      margin: 0 auto;
+    }
+
+    .past-meets-future {
+      margin: 6em auto 8em;
+    }
+
     main#projects {
       width: 90%;
       max-width: 90%;
