--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -220,14 +220,28 @@
   }
 
   .wireframe,
-  .past-meets-future {
+  .past-meets-design {
     display: flex;
     flex-direction: column;
     justify-content: center;
     gap: 2em;
     margin: 6em auto 6em;
-    max-width: 50vw;
+    width: 80%;
+    max-width: 80vw;
     min-height: 100vh;
+  }
+
+  .past-meets-future picture {
+    width: 659px;
+    height: 769px;
+    min-height: 22rem;
+  }
+
+  .past-meets-future img {
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: contain;
   }
 
   #wireframe-img1 picture {
@@ -238,6 +252,10 @@
 
   #wireframe-img1 img {
     aspect-ratio: 800 / 2714;
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: contain;
   }
 
   #wireframe-img2 picture {
@@ -246,8 +264,12 @@
     min-height: 84rem;
   }
 
-  #wireframe-img1 img {
+  #wireframe-img2 img {
     aspect-ratio: 800 / 1445;
+    width: 100%;
+    height: auto;
+    display: block;
+    object-fit: contain;
   }
 
   #wireframe-img3 picture {
@@ -258,22 +280,10 @@
 
   #wireframe-img3 img {
     aspect-ratio: 800 / 2721;
-  }
-
-  .past-meets-future picture {
-    width: 800px;
-    height: 665px;
-    min-height: 20rem;
-  }
-
-  .past-meets-future img {
     width: 100%;
     height: auto;
-    object-fit: contain;
     display: block;
-    margin: auto;
-    padding: 0.25em;
-    aspect-ratio: 800 / 665;
+    object-fit: contain;
   }
 
   .menu-grid {
@@ -286,13 +296,6 @@
     margin: 0 auto;
     padding: 0;
     gap: 5em;
-  }
-
-  .images2 img {
-    width: 100%;
-    height: auto;
-    display: block;
-    object-fit: contain;
   }
 
   .cta-section p {
@@ -768,7 +771,7 @@
       max-width: 100vw;
       object-fit: contain;
       display: block;
-      margin: auto;
+      margin: 0 auto;
       padding: 0.25em;
     }
 
