--- a/styles/styles-article.css
+++ b/styles/styles-article.css
@@ -89,11 +89,13 @@
     margin: 2em auto 0;
   }
 
+  #section2,
   #section1 {
     margin: 4em auto;
     padding: 1em 4em;
   }
 
+  #section2 h2,
   #section1 h2 {
     color: cyan;
   }
@@ -579,6 +581,7 @@
       max-width: 90vw;
     }
 
+    #section2,
     #section1 {
       padding: 2em;
     }
@@ -758,6 +761,7 @@
       line-height: 1.2;
     }
 
+    #section2,
     #section1 {
       margin: 4em auto 4em;
       padding: 0.5em 1em;
@@ -1091,6 +1095,7 @@
     .thumbnails img {
       aspect-ratio: 118 / 97;
     }
+
 
     #section1 {
       padding: 1em;
